--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -851,20 +851,21 @@
                     android:textSize="@dimen/_11ssp" />
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_16sdp"
-                app:cardCornerRadius="@dimen/_10sdp">
+                app:cardCornerRadius="@dimen/_10sdp"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:id="@+id/boLL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:padding="@dimen/_11sdp">
+                    >
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/boRecycler"
@@ -884,7 +885,7 @@
                     android:textColor="@color/light_gray"
                     android:textSize="@dimen/_10ssp"
                     android:visibility="gone" />
-            </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
 
 
