--- a/app/src/main/res/layout/review_application_beneficial_owners_list_item.xml
+++ b/app/src/main/res/layout/review_application_beneficial_owners_list_item.xml
@@ -3,15 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/et_bg_gray"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:layout_marginRight="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_16sdp"
         app:cardCornerRadius="@dimen/_10sdp">
 
