--- a/app/src/main/res/layout/activity_benificial_owner_details.xml
+++ b/app/src/main/res/layout/activity_benificial_owner_details.xml
@@ -16,6 +16,7 @@
         android:paddingTop="@dimen/_20sdp">
 
         <LinearLayout
+            android:id="@+id/backLL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -56,6 +57,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/owner_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -67,6 +69,7 @@
                 android:textSize="@dimen/_16ssp" />
 
             <LinearLayout
+                android:id="@+id/primaryLL"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -107,8 +110,8 @@
                     android:layout_width="180dp"
                     android:layout_height="130dp"
                     android:layout_centerInParent="true"
-                    android:progress="10"/>
-<!--                    android:progressDrawable="@drawable/progressbar_bg1" />-->
+                    android:progress="25"
+                    android:progressDrawable="@drawable/progressbar_bg1" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -180,6 +183,7 @@
                 android:textSize="@dimen/_11ssp" />
 
             <TextView
+                android:id="@+id/dob_bo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_7sdp"
@@ -204,6 +208,7 @@
                 android:textSize="@dimen/_11ssp" />
 
             <TextView
+                android:id="@+id/address_bo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_7sdp"
@@ -228,6 +233,7 @@
                 android:textSize="@dimen/_11ssp" />
 
             <TextView
+                android:id="@+id/ssn_bo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_7sdp"
