--- a/app/src/main/res/layout/review_application_beneficial_owners_list_item.xml
+++ b/app/src/main/res/layout/review_application_beneficial_owners_list_item.xml
@@ -4,23 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/et_bg_gray"
+    android:background="@color/white"
     android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:layout_marginRight="@dimen/_10sdp"
-        android:layout_marginBottom="@dimen/_16sdp"
-        app:cardCornerRadius="@dimen/_10sdp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="@dimen/_11sdp"
-            android:paddingRight="@dimen/_11sdp">
+            >
 
             <TextView
                 android:id="@+id/number_bo"
@@ -247,5 +240,4 @@
 
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
 </LinearLayout>
