--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -87,7 +87,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:paddingLeft="@dimen/_11sdp"
                     android:paddingRight="@dimen/_11sdp">
@@ -266,13 +266,15 @@
                         android:background="@color/light_gray" />
 
                     <LinearLayout
+                        android:id="@+id/ll_upload_articles"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_14sdp"
                         android:background="@drawable/bg_white_color_light_border"
                         android:paddingLeft="@dimen/_8sdp"
                         android:paddingTop="@dimen/_13sdp"
-                        android:paddingBottom="@dimen/_14sdp">
+                        android:paddingBottom="@dimen/_14sdp"
+                        android:visibility="gone">
 
                         <ImageView
                             android:layout_width="wrap_content"
@@ -327,13 +329,15 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/ll_upload_ein"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_14sdp"
                         android:background="@drawable/bg_white_color_light_border"
                         android:paddingLeft="@dimen/_8sdp"
                         android:paddingTop="@dimen/_13sdp"
-                        android:paddingBottom="@dimen/_14sdp">
+                        android:paddingBottom="@dimen/_14sdp"
+                        android:visibility="gone">
 
                         <ImageView
                             android:layout_width="wrap_content"
@@ -388,13 +392,15 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/ll_upload_w9"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_14sdp"
                         android:background="@drawable/bg_white_color_light_border"
                         android:paddingLeft="@dimen/_8sdp"
                         android:paddingTop="@dimen/_13sdp"
-                        android:paddingBottom="@dimen/_14sdp">
+                        android:paddingBottom="@dimen/_14sdp"
+                        android:visibility="gone">
 
                         <ImageView
                             android:layout_width="wrap_content"
@@ -776,6 +782,7 @@
                             android:src="@drawable/ic_upload" />
 
                         <LinearLayout
+                            android:id="@+id/ll_dba_filling"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/_5sdp"
