--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -6,8 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".view.WebViewActivity">
 
-    <im.delight.android.webview.AdvancedWebView
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
+
+    <LinearLayout
+        android:id="@+id/layoutClose"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical">
+
+        <ImageButton
+            android:id="@+id/closeBtn"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:background="@color/white"
+            android:src="@drawable/ic_close"
+            android:visibility="visible"
+            app:tint="@color/black" />
+
+    <WebView
         android:id="@+id/webView"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -58,6 +80,10 @@
             android:text="Please do not leave this screen. Thank you \nfor your patience."
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
+
+    </RelativeLayout>
+
+    </LinearLayout>
 
     </RelativeLayout>
 
