--- a/app/src/main/res/layout/activity_additional_benifitial_owners.xml
+++ b/app/src/main/res/layout/activity_additional_benifitial_owners.xml
@@ -116,6 +116,7 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="@string/beneficialnreach"
                 android:textColor="@color/primary_black"
+                android:visibility="visible"
                 android:textSize="@dimen/_11ssp" />
 
             <LinearLayout
