--- a/app/src/main/res/layout/activity_merchants_agrement.xml
+++ b/app/src/main/res/layout/activity_merchants_agrement.xml
@@ -14,6 +14,7 @@
         android:paddingTop="@dimen/_44sdp">
 
         <ImageView
+            android:id="@+id/canceledIV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_10sdp"
