--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -478,7 +478,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:inputType="text|textNoSuggestions"
+                        android:inputType="text|textNoSuggestions|textCapSentences"
                         android:maxLength="100"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -537,7 +537,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:inputType="text|textNoSuggestions"
+                        android:inputType="text|textNoSuggestions|textCapSentences"
                         android:maxLength="100"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -597,7 +597,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:inputType="text|textNoSuggestions"
+                        android:inputType="text|textNoSuggestions|textCapSentences"
                         android:maxLength="50"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
