--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -767,8 +767,10 @@
                         />
 
                     <LinearLayout
+                        android:id="@+id/llDBADocuments"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:visibility="gone"
                         android:layout_marginBottom="@dimen/_14sdp"
                         android:background="@drawable/bg_white_color_light_border"
                         android:paddingLeft="@dimen/_8sdp"
@@ -983,6 +985,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:id="@+id/ll_privacy"
                         android:paddingTop="@dimen/_11sdp"
                         android:paddingBottom="@dimen/_11sdp">
 
@@ -1023,6 +1026,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:id="@+id/ll_terms"
                         android:paddingTop="@dimen/_11sdp"
                         android:paddingBottom="@dimen/_11sdp">
 
@@ -1062,6 +1066,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:id="@+id/ll_merchant"
                         android:paddingTop="@dimen/_11sdp"
                         android:paddingBottom="@dimen/_11sdp">
 
