--- a/app/src/main/res/layout/review_application_beneficial_owners_list_item.xml
+++ b/app/src/main/res/layout/review_application_beneficial_owners_list_item.xml
@@ -181,6 +181,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:id="@+id/llUploadDocument"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_14sdp"
                 android:background="@drawable/bg_white_color_light_border"
@@ -203,6 +204,7 @@
 
                     <TextView
                         android:layout_width="wrap_content"
+                        android:id="@+id/bo_uploaded_method"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_1sdp"
                         android:fontFamily="@font/opensans_semibold"
