--- a/app/src/main/res/layout/activity_merchant_settings_benificial_owners.xml
+++ b/app/src/main/res/layout/activity_merchant_settings_benificial_owners.xml
@@ -36,6 +36,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:contentDescription="@string/back_button"
                         android:src="@drawable/ic_back" />
                 </LinearLayout>
 
@@ -51,11 +52,10 @@
             </LinearLayout>
 
 
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvBo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvBo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
 
             <TextView
                 android:id="@+id/noDataTV"
