--- a/app/src/main/res/layout/activity_business_tracker_account.xml
+++ b/app/src/main/res/layout/activity_business_tracker_account.xml
@@ -35,6 +35,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/infoTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -45,6 +46,19 @@
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp"
             android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/appFinishedTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/_16sdp"
+            android:fontFamily="@font/opensans_bold"
+            android:text="Application Completed!"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_16ssp"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/_16sdp"/>
 
         <TextView
             android:id="@+id/dashboardTV"
