--- a/app/src/main/res/layout/activity_dba_information.xml
+++ b/app/src/main/res/layout/activity_dba_information.xml
@@ -875,7 +875,7 @@
                         android:layout_height="wrap_content"
                         android:autofillHints="creditCardSecurityCode"
                         android:fontFamily="@font/opensans_semibold"
-                        android:imeOptions="actionNext"
+                        android:imeOptions="actionDone"
                         android:inputType="number"
                         android:maxLength="5"
                         android:maxLines="1"
