--- a/app/src/main/res/layout/activity_enable_auth_id.xml
+++ b/app/src/main/res/layout/activity_enable_auth_id.xml
@@ -118,7 +118,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="@dimen/_20sdp"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -401,15 +401,16 @@
         android:id="@+id/businessSuccessRL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:layout_marginLeft="@dimen/_21sdp"
         android:layout_marginRight="@dimen/_21sdp"
+        android:background="@color/white"
         android:visibility="gone">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_above="@id/btnLL"
+            android:layout_alignParentTop="true"
             android:orientation="vertical">
 
             <ImageView
@@ -425,11 +426,10 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="@dimen/_35sdp"
                 android:fontFamily="@font/opensans_bold"
+                android:gravity="start"
                 android:text="Your Account Has Been Created"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp"
-                android:gravity="start"
-                />
+                android:textSize="@dimen/_16ssp" />
 
             <TextView
                 android:layout_width="match_parent"
