--- a/app/src/main/res/layout/activity_website.xml
+++ b/app/src/main/res/layout/activity_website.xml
@@ -19,22 +19,22 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_25sdp"
-            android:layout_marginStart="@dimen/_15sdp"
             android:gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:fontFamily="@font/opensans_regular"
                 android:text="Https://"
                 android:textColor="@color/light_gray"
-                android:textSize="@dimen/_12ssp" />
+                android:textSize="@dimen/_12ssp"
+                />
 
             <View
                 android:layout_width="1.5dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
                 android:background="@color/light_gray" />
 
         </LinearLayout>
