--- a/app/src/main/res/layout/monthly_processing_volume_layout.xml
+++ b/app/src/main/res/layout/monthly_processing_volume_layout.xml
@@ -18,13 +18,13 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_25sdp"
-            android:layout_marginStart="@dimen/_15sdp"
             android:gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:fontFamily="@font/opensans_bold"
                 android:text="$"
                 android:textColor="@color/primary_green"
@@ -33,7 +33,6 @@
             <View
                 android:layout_width="1.5dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
                 android:background="@color/light_gray" />
 
         </LinearLayout>
@@ -73,10 +72,10 @@
         android:text="Monthly Processing Volume"
         android:textColor="@color/primary_black"
         android:textSize="@dimen/text_size_11sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/volhintdHolderLL"
         app:layout_constraintStart_toStartOf="@+id/volhintdHolderLL"
-        app:layout_constraintTop_toTopOf="@+id/volhintdHolderLL"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toTopOf="@+id/volhintdHolderLL" />
 
 
     <LinearLayout
