--- a/app/src/main/res/layout/activity_dbainfo_details.xml
+++ b/app/src/main/res/layout/activity_dbainfo_details.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/et_bg_gray"
+    android:orientation="vertical"
     tools:context=".view.business.DBAInfoDetails">
 
     <LinearLayout
@@ -14,8 +14,8 @@
         android:background="@drawable/bottomradius"
         android:orientation="vertical"
         android:paddingStart="@dimen/_21sdp"
-        android:paddingEnd="@dimen/_1sdp"
         android:paddingTop="@dimen/_45sdp"
+        android:paddingEnd="@dimen/_1sdp"
         android:paddingBottom="@dimen/_11sdp">
 
         <LinearLayout
@@ -44,31 +44,29 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
-        >
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="@dimen/_16sdp"
-            >
+            android:paddingTop="@dimen/_16sdp">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_11sdp"
-                android:layout_marginEnd="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_4sdp"
+                android:layout_marginEnd="@dimen/_11sdp"
                 android:layout_marginBottom="@dimen/_14sdp"
                 app:cardCornerRadius="@dimen/_10sdp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/dba_backimg"
                     android:orientation="vertical"
                     android:paddingStart="@dimen/_11sdp"
-                    android:background="@drawable/dba_backimg"
                     android:paddingEnd="@dimen/_11sdp">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -106,8 +104,8 @@
                                     android:id="@+id/dba_userProfileIV"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:scaleType="fitXY"
                                     android:contentDescription="@string/profile_image"
+                                    android:scaleType="fitXY"
                                     android:visibility="gone" />
 
                                 <TextView
@@ -129,8 +127,8 @@
                             android:id="@+id/dba_editProfileIV"
                             android:layout_width="@dimen/_17sdp"
                             android:layout_height="@dimen/_17sdp"
-                            android:src="@drawable/ic_editicon"
                             android:contentDescription="@string/edit_profile_icon"
+                            android:src="@drawable/ic_editicon"
                             app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                             app:layout_constraintEnd_toEndOf="@+id/linearLayout" />
 
@@ -151,17 +149,17 @@
                         android:id="@+id/webIdLL"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
                         android:layout_gravity="center"
-                        android:visibility="visible"
-                        >
+                        android:orientation="horizontal"
+                        android:visibility="visible">
+
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:contentDescription="@string/this_is_web_icon"
-                            android:src="@drawable/dba_web_icon"
-                            />
+                            android:src="@drawable/dba_web_icon" />
+
                         <TextView
                             android:id="@+id/websiteTV"
                             android:layout_width="wrap_content"
@@ -178,9 +176,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_7sdp"
                         android:background="@drawable/bg_core_f2f5f8"
                         android:fontFamily="@font/opensans_semibold"
-                        android:layout_marginTop="@dimen/_7sdp"
                         android:paddingStart="@dimen/_10sdp"
                         android:paddingTop="@dimen/_4sdp"
                         android:paddingEnd="@dimen/_9sdp"
@@ -338,24 +336,26 @@
                     android:paddingStart="@dimen/_11sdp"
                     android:paddingTop="@dimen/_11sdp"
                     android:paddingEnd="@dimen/_11sdp">
-                             <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/_1sdp"
-                                android:fontFamily="@font/opensans_regular"
-                                android:text="@string/address"
-                                android:textColor="@color/dark_grey"
-                                android:textSize="@dimen/_11ssp" />
 
-                            <TextView
-                                android:id="@+id/addressTV"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/_7sdp"
-                                android:fontFamily="@font/opensans_semibold"
-                                android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_12ssp" />
-                       <View
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/_1sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="@string/address"
+                        android:textColor="@color/dark_grey"
+                        android:textSize="@dimen/_11ssp" />
+
+                    <TextView
+                        android:id="@+id/addressTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/_7sdp"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_12ssp" />
+
+                    <View
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/_1sdp"
                         android:layout_marginBottom="@dimen/_16sdp"
