--- a/app/src/main/res/layout/activity_identity_verification.xml
+++ b/app/src/main/res/layout/activity_identity_verification.xml
@@ -196,13 +196,12 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/_20sdp"
                                 android:hint="@string/ssnlast"
-                                android:textColorHint="@color/black"
+                                android:textColorHint="@color/light_gray"
                                 app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                                 app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                                 app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                                 app:boxCornerRadiusTopStart="@dimen/_10sdp"
                                 app:boxStrokeColor="@color/primary_color"
-                                app:expandedHintEnabled="false"
                                 app:hintTextColor="@color/primary_color">
 
                                 <com.google.android.material.textfield.TextInputEditText
@@ -211,7 +210,6 @@
                                     android:layout_height="wrap_content"
                                     android:autofillHints="creditCardSecurityCode"
                                     android:fontFamily="@font/opensans_semibold"
-                                    android:hint="@string/digits4"
                                     android:imeOptions="actionDone"
                                     android:inputType="number"
                                     android:maxLength="4"
@@ -276,13 +274,13 @@
                                     android:clickable="true"
                                     android:focusable="false"
                                     android:hint="@string/dobol"
-                                    android:textColorHint="@color/black"
+                                    android:textColorHint="@color/light_gray"
                                     app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                                     app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                                     app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                                     app:boxCornerRadiusTopStart="@dimen/_10sdp"
                                     app:boxStrokeColor="@color/primary_color"
-                                    app:expandedHintEnabled="false"
+                                    app:expandedHintEnabled="true"
                                     app:hintTextColor="@color/primary_color"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
@@ -298,7 +296,6 @@
                                         android:editable="false"
                                         android:focusable="false"
                                         android:fontFamily="@font/opensans_semibold"
-                                        android:hint="@string/dobhint"
                                         android:imeOptions="actionDone"
                                         android:inputType="none"
                                         android:maxLength="30"
