--- a/app/src/main/res/layout/list_item_merchant_settings_beneficial_owners.xml
+++ b/app/src/main/res/layout/list_item_merchant_settings_beneficial_owners.xml
@@ -40,7 +40,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Johnathan Joestar"
+                        android:text=""
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp"
                         android:textStyle="bold" />
@@ -52,6 +52,7 @@
                         android:layout_gravity="top"
                         android:layout_toRightOf="@+id/nameTx"
                         android:contentDescription="@string/primary"
+                        android:visibility="gone"
                         android:src="@drawable/ic_icon_awesome_star" />
 
                     <TextView
@@ -61,7 +62,7 @@
                         android:layout_below="@+id/nameTx"
                         android:layout_marginTop="@dimen/_6sdp"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="35% Ownership"
+                        android:text=""
                         android:textColor="@color/xdark_gray"
                         android:textSize="@dimen/_10ssp" />
 
