--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -170,16 +170,19 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
                             android:text=""
+                            android:inputType="textPassword"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
 
                         <ImageView
+                            android:id="@+id/llEIN"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="right"
                             android:paddingTop="@dimen/_3sdp"
+                            android:background="@drawable/ic_eyeclose"
                             android:paddingBottom="@dimen/_3sdp"
-                            android:src="@drawable/ic_eyeopen" />
+                            />
                     </LinearLayout>
 
                     <View
@@ -542,7 +545,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_7sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Restaurant"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
 
@@ -592,7 +594,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_7sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Http://www.firebbq.com"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
 
@@ -619,7 +620,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_7sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="$ 80,000.00"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
 
@@ -646,7 +646,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_7sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="$ 6,000.00"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
 
@@ -673,7 +672,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_7sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="$ 35.00"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
 
@@ -700,7 +698,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_7sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Jonathanjostar@gmail.com"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
 
@@ -727,7 +724,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_7sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="123-456-7890"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
 
@@ -754,7 +750,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_7sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="3131 Camino Del Rio, San Diego,\nCA, 92108"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
 
